[package]
name = "bestls"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
owo-colors = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
